package io.github.ptus04.server.enums;

public enum OrderPaymentMethodEnum {
    SEPAY
}
